Design bugfix on Firefox (a div was too wide)

--- a/static/css/station/station.css
+++ b/static/css/station/station.css
@@ -622,7 +622,7 @@ input#search_button{
 }
 
 .onair_item .right .title{
-	width:148px;
+	width:146px;
 	height:50px;
 	overflow: hidden;
 	line-height: 13px;
